--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,10 @@
 mkdocs==1.4.2
 mkdocs-material==9.1.6
+mkdocs-git-revision-date-plugin==0.3.2
+mkdocs-macros-plugin==0.7.0
 mkdocs-markdownextradata-plugin==0.2.5
+mkdocs-material-extensions==1.1.1
+mkdocs-mermaid2-plugin==0.6.0
+mknotebooks==0.7.1
+mkdocs-literate-nav==0.6.0
+mkdocs-awesome-pages-plugin==2.9.0
