--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,4 @@ mkdocs-mermaid2-plugin==0.6.0
 mknotebooks==0.7.1
 mkdocs-literate-nav==0.6.0
 mkdocs-awesome-pages-plugin==2.9.0
+mkdocs-minify-plugin==0.6.4
