--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,8 +15,8 @@ use_directory_urls: false
 
 # 主题
 theme:
-#  name: material
-  name: mkdocs
+  name: material
+#  name: mkdocs
 #  name: mkdocs
   # 覆盖mkdocs默认HTML模板的目录
   custom_dir: overrides
