--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,4 @@ mknotebooks==0.7.1
 mkdocs-literate-nav==0.6.0
 mkdocs-awesome-pages-plugin==2.9.0
 mkdocs-minify-plugin==0.6.4
+mkdocs-jupyter==0.24.1
