--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -65,7 +65,7 @@ theme:
   icon:
     logo: logo
 
-## 顶部导航栏
+# 顶部导航栏
 nav:
   - Python: python/
   - 后端: 后端/
@@ -77,7 +77,7 @@ nav:
   - 常用工具: 常用工具/
   - 常用命令: 常用命令/
   - 其他: 其他/
-  - 关于1111: 关于/
+  - 关于: 关于/
 
 
 # 插件
@@ -91,6 +91,7 @@ plugins:
       minify_html: true
 #  - markdownextradata:
 #      data: data
+  # 自动生成导航栏
   - awesome-pages
   - literate-nav:
       nav_file: nav.md
@@ -143,13 +144,13 @@ markdown_extensions:
 
 
 extra_css:
-  - assets/stylesheets/custom.css
+  - assets/stylesheets/my.css
 #  - https://fastapi.tiangolo.com/css/termynal.css
 #  - https://fastapi.tiangolo.com/css/custom.css
 extra_javascript:
   - https://cdnjs.loli.net/ajax/libs/pangu/3.3.0/pangu.min.js
+  - https://cdnjs.cloudflare.com/ajax/libs/mathjax/3.2.0/es5/tex-chtml.min.js
   - assets/javascripts/mathjax.js
 #  - https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/7.12.1/polyfill.min.js
-#  - https://cdnjs.cloudflare.com/ajax/libs/mathjax/3.2.0/es5/tex-chtml.min.js
 #  - https://fastapi.tiangolo.com/js/termynal.js
 #  - https://fastapi.tiangolo.com/js/custom.js
