--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -144,6 +144,7 @@ markdown_extensions:
 
 
 extra_css:
+  - assets/stylesheets/bootstrap.min.css
   - assets/stylesheets/my.css
 #  - https://fastapi.tiangolo.com/css/termynal.css
 #  - https://fastapi.tiangolo.com/css/custom.css
