--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -143,9 +143,9 @@ markdown_extensions:
 
 
 extra_css:
-- assets/stylesheets/bootstrap.min.css
 - https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.16.7/katex.min.css
 - assets/stylesheets/my.css
+# - assets/stylesheets/bootstrap.min.css
 #  - https://fastapi.tiangolo.com/css/termynal.css
 #  - https://fastapi.tiangolo.com/css/custom.css
 extra_javascript:
